ADD mockup service

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <nav>
         <img class="logo" src="images/tm_logo.png">
     </nav>
-
+    <button onclick="apiCallExample()">Server sample</button>
     <div class="drag-area">
         <header>Drag & Drop to Upload File</header>
         <span>OR</span>
