--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,9 @@
     <nav>
         <img class="logo" src="images/tm_logo.png">
     </nav>
+
     <button onclick="apiCallExample()">Server sample</button>
+
     <div class="drag-area">
         <header>Drag & Drop to Upload File</header>
         <span>OR</span>
@@ -186,6 +188,7 @@
     </table>
 
     <script src="app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gbx"></script>
 </body>
 
 </html>
