--- a/public/index.html
+++ b/public/index.html
@@ -187,7 +187,8 @@
         </tbody>
     </table>
 
-    <script src="app.js"></script>
+    <script src="drag-and-drop.js"></script>
+    <script src="table-fill.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gbx"></script>
 </body>
 
