--- a/public/index.html
+++ b/public/index.html
@@ -193,6 +193,7 @@
         </tbody>
     </table>
 
+    <script src="environment.js"></script>
     <script src="drag-and-drop.js"></script>
     <script src="table-fill.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gbx"></script>
