--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>Trackmania</title>
 </head>
 
-<body>
+<body onload="initBody()">
 
     <nav>
         <img class="logo" src="images/tm_logo.png">
