--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
 
     <div class="drag-area">
         <div class="area-empty">
-            <header>Drag & Drop to Upload File</header>
-            <span>OR</span>
-            <button>Browse File</button>
-            <input type="file">
+            <header class="drag-ignore">Drag & Drop to Upload File</header>
+            <span class="drag-ignore">OR</span>
+            <button class="drag-ignore">Browse File</button>
+            <input class="drag-ignore" type="file">
         </div>
 
         <div class="area-filled">
