--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="navigation.css">
     <link rel="stylesheet" href="drag-and-drop.css">
     <link rel="stylesheet" href="tables.css">
+    <link rel="stylesheet" href="style.css">
     <title>Trackmania</title>
 </head>
 
